fixed spacing

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -48,7 +48,6 @@
 
 .home_caption {
   text-align: left;
-  margin-left: 1rem;
   margin-top: 0px;
   padding-top: 0px;
 }
@@ -95,7 +94,7 @@
   justify-content: center;
   font-family: "Chivo", sans-serif;
   align-items: center;
-  color: #000000;
+  color: #263430;
   max-width: 80%;
   margin-left: auto;
   margin-right: auto;
@@ -104,12 +103,13 @@
 }
 
 .bold_text {
+  margin: 0;
   font-size: 1.25rem;
   display: flex;
   justify-content: center;
   font-family: "Open Sans";
   flex-direction: column;
-  color: #000000;
+  color: #263430;
 }
 
 .small_bold_text {
@@ -119,7 +119,7 @@
   justify-content: center;
   font-family: "Open Sans";
   flex-direction: column;
-  color: #000000;
+  color: #263430;
 }
 
 .contact_text {
@@ -130,11 +130,11 @@
   overflow: hidden;
   justify-content: center;
   font-family: "Open Sans";
-  color: #000000;
+  color: #263430;
 }
 
 .header_text {
-  color: #375051;
+  color: #263430;
   font-size: 2.5rem;
   margin: 0;
   align-content: center;
@@ -144,7 +144,7 @@
 }
 
 .small_header_text {
-  color: #375051;
+  color: #263430;
   font-size: 1.5rem;
   margin: 0;
   margin-bottom: 1.5rem;
